# assignment-service

./: .coveragerc  .env.example  .flake8  .gitignore  Dockerfile  InitTestDatabase.ps1  LICENSE  MakeDeploymentFolder.ps1  README.md  StartBackend.ps1  alembic.ini  algorithm.py  constants.py  docker-compose.dev.yml  docker-compose.yml  env  helper.py  main.py  nginx_proxy.conf  nginx_proxy.dev.conf  pyproject.toml  pytest.ini  requirements.txt  start_app.sh  test_algorithm.py  test_logical.py  test_performace.py  tests.py
.github/: codecov.yml
.github/workflows/: backup_db.yml  build.yml  ci.yml  integration.yml  issues.yml  jit-security.yml  main.yml  main_ci.yml  pr.yml  tests.yml
.jit/: jit-plan.yml
alembic/: README.md  env.py
alembic/versions/: 0119449915bc_add_studentperiod_table.py  0121f8a608f6_add_project_states_in_period.py  069cdd65470b_fix_form_flag.py  0b1dfc0ed206_add_new_columns_to_periods.py  0c6a1e2f4bdb_add_titles_columns_and_dates.py  0f7eafeff035_add_studentperiod_table.py  140c542d2c01_add_dates_table.py  1dcd6d25add0_fix_students_migrations.py  20183e7d0b0c_add_nulls_and_default_values.py  2af912a15ee6_add_period_to_form_preferences.py  3a369462af3b_add_unique_constraint_on_student_id_in_.py  3fd918400333_presentation_dates_init_value.py  6b37846cb4de_add_columns_to_dates_tables.py  7d0c0baebc8e_add_tutors_dates_table.py  7d3fb66aaa9e_add_group_dates_table.py  972e5ddd861b_add_intermediate_field.py  a4368e7eff26_add_group_number.py  c41806b65098_add_period_id_column_to_groups_table.py  d8cd55091e57_add_form_feature_flag.py  e1752434f27e_add_group_number.py  e3751539bc5b_add_period_id_in_groups.py  feccbed960a7_add_column_reviewer_id.py
api/: app.py  controller.py  database.py  exceptions.py  main.py  models.py  repository.py  routes.py  service.py  topic_preferences_controller.py  topic_preferences_repository.py  topic_preferences_service.py
api/controllers/: topic_category_controller.py  topic_controller.py
api/repositories/: topic_category_repository.py  topic_preferences_repository.py  topic_repository.py
api/services/: topic_category_service.py  topic_preferences_service.py  topic_service.py
backend/: app.py
docs/: algorithms.md
src/: constants.py  exceptions.py
src/algorithms/: date_evaluators_lp.py  date_simplex.py  date_tutors_lp.py  delivery_evaluators_lp_solver.py  delivery_flow_solver.py  delivery_lp_solver.py  delivery_solver.py  delivery_tutors_lp_solver.py  exceptions.py  group_tutor_lp_solver.py  group_tutor_solver.py  max_flow_min_cost.py  simplex_solver.py  solver.py  topic_tutor.py  topic_tutor_assignment_flow_solver.py  tutor_topics.py
src/api/: app.py  exceptions.py  main.py
src/assignments/: solver.py
src/config/: config.py  database.py  logging.py
src/core/: azure_container_client.py  date_slots.py  delivery_date.py  email_client.py  (+9 more)
storage/: database.py  tables.py  topic_preferences_table.py
(+351 files in other folders)
