[tool.poetry]
name = "assignment-service"
version = "0.1.0"
description = "An assignment service to solve assignment problems"
authors = ["celedituro <cdituro@fi.uba.ar>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scipy = "^1.13.0"
pytest = "^8.2.0"
networkx = "^3.3"
numpy = "^1.26.4"
pylint = "^3.1.0"
pulp = "^2.8.0"
flake8 = "^7.0.0"
black = "^24.4.2"
pandas = "^2.2.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-cov = "^5.0.0"

[tool.pytest.ini_options]
addopts = "-v --strict-markers --cov=src tests/ --cov-report=xml"
testpaths = ["tests"]
python_files = ["*_test.py"]
markers = [
    "unit",
    "performance",
    "formatter"
]

[virtualenvs]
create = true
in-project = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

