[tool.poetry]
name = "assignment-service"
version = "0.1.0"
description = "An assignment service to solve assignment problems"
authors = ["celedituro <cdituro@fi.uba.ar>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.0"
networkx = "3.3.0"
numpy = "1.26.4"
pulp = "2.8.0"
pandas = "2.2.2"
python-dotenv = "1.0.1"
pyscipopt = "5.0.1"
solver = "0.0.4"
fastapi = "0.111.0"
uvicorn = "0.30.1"

[tool.poetry.group.dev.dependencies]
pytest = "8.2.0"
pytest-cov = "5.0.0"
coverage = "7.5.3"
pytest-mock = "3.14.0"
pylint = "3.1.0"
flake8 = "7.0.0"
black = "24.4.2"
httpx = "0.27.0"

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["tests"]
python_files = ["*_test.py"]
markers = [
    "unit",
    "performance"
]

[virtualenvs]
create = true
in-project = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
